--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,24 @@
 <resources>
-    <dimen name="app_bar_height">180dp</dimen>
+    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="app_bar_height">400dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="cardview_padding">4dp</dimen>
+    <dimen name="cardview_margin">8dp</dimen>
+    <dimen name="description_padding">10dp</dimen>
+    <dimen name="label_padding_left">1dp</dimen>
+    <dimen name="label_padding_right">1dp</dimen>
+    <dimen name="label_padding">3dp</dimen>
     <dimen name="text_margin">16dp</dimen>
+    <dimen name="product_text_margin">5dp</dimen>
+    <dimen name="price_group">80dp</dimen>
+    <dimen name="label_font">10sp</dimen>
+    <dimen name="temperature_size">70sp</dimen>
+    <dimen name="description_size">30sp</dimen>
+    <dimen name="humidity_size">35sp</dimen>
+    <dimen name="city_size">50sp</dimen>
+    <dimen name="dateSize">25sp</dimen>
+    <dimen name="minMaxSize">18sp</dimen>
+    <dimen name="titleSize">30sp</dimen>
+    <dimen name="icon">50dp</dimen>
 </resources>
