Correções de Model

--- a/app/src/main/res/layout/content_weather_header.xml
+++ b/app/src/main/res/layout/content_weather_header.xml
@@ -26,8 +26,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/titleSize"
-                android:text="@string/now"/>
+                android:textSize="@dimen/titleSize"/>
             <ImageView
                 android:id="@+id/image"
                 android:layout_width="@dimen/icon"
@@ -46,7 +45,6 @@
                 android:id="@+id/unit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/metric_unit"
                 android:textSize="@dimen/temperature_size"/>
         </LinearLayout>
         <LinearLayout
@@ -64,7 +62,6 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
             <TextView
-                android:text="@string/humidity"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -74,7 +71,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/metric_unit"
                 android:textSize="@dimen/humidity_size"/>
         </LinearLayout>
     </LinearLayout>
