--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#2196F3</color>
+    <color name="colorPrimaryDark">#42A5F5</color>
+    <color name="colorAccent">#0D47A1</color>
+    <color name="cardviewBackground">#FFFFFF</color>
+    <color name="errorButton">#039BE5</color>
+    <color name="errorButtonText">#FFFFFF</color>
+    <color name="colorBackground">#CCCCCC</color>
 </resources>
