--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="colorBackground">#CCCCCC</color>
     <color name="shadow">#000000</color>
     <color name="homeText">#FFFFFF</color>
+    <color name="minTemperature">#1565C0</color>
+    <color name="maxTemperature">#F44336</color>
 </resources>
