--- a/app/src/main/res/layout/weather_holder.xml
+++ b/app/src/main/res/layout/weather_holder.xml
@@ -1,56 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card_view"
-    android:layout_gravity="center"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/cardviewBackground"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center"
     android:layout_margin="@dimen/cardview_margin"
+    android:background="@color/cardviewBackground"
     android:padding="@dimen/cardview_padding"
     card_view:cardCornerRadius="4dp">
-    <LinearLayout
-        android:orientation="horizontal"
+
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_margin="@dimen/cardview_margin">
-            <TextView
-                android:id="@+id/date"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="center_vertical|center_horizontal"
-                android:layout_weight="1"
-                android:gravity="center_vertical"
-                android:textSize="@dimen/dateSize"
-                android:textStyle="bold"/>
-            <ImageView
-                android:id="@+id/image"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="center_vertical|center_horizontal"
-                android:gravity="center_vertical"
-                android:layout_weight="1"
-                android:layout_margin="@dimen/cardview_margin"/>
-            <TextView
-                android:id="@+id/max_temperature"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="center_vertical|center_horizontal"
-                android:gravity="center_vertical"
-                android:layout_weight="1"
-                android:textColor="@color/maxTemperature"
-                android:textSize="@dimen/minMaxSize"
-                android:textStyle="bold"/>
-            <TextView
-                android:id="@+id/min_temperature"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="center_vertical|center_horizontal"
-                android:gravity="center_vertical"
-                android:layout_weight="1"
-                android:textColor="@color/minTemperature"
-                android:textSize="@dimen/minMaxSize"
-                android:textStyle="bold"/>
-    </LinearLayout>
+
+        <TextView
+            android:id="@+id/date"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical|center_horizontal"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:gravity="center_vertical"
+            android:textSize="@dimen/dateSize"
+            android:textStyle="bold"
+            card_view:layout_constraintBottom_toBottomOf="parent"
+            card_view:layout_constraintEnd_toStartOf="@+id/image"
+            card_view:layout_constraintHorizontal_bias="0.5"
+            card_view:layout_constraintHorizontal_chainStyle="spread_inside"
+            card_view:layout_constraintStart_toStartOf="parent"
+            card_view:layout_constraintTop_toTopOf="parent"
+            tools:text="@tools:sample/date/day_of_week" />
+
+        <ImageView
+            android:id="@+id/image"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_gravity="center_vertical|center_horizontal"
+            android:layout_margin="@dimen/cardview_margin"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:gravity="center_vertical|center_horizontal"
+            card_view:layout_constraintBottom_toBottomOf="parent"
+            card_view:layout_constraintEnd_toStartOf="@+id/max_temperature"
+            card_view:layout_constraintHorizontal_bias="0.5"
+            card_view:layout_constraintStart_toEndOf="@+id/date"
+            card_view:layout_constraintTop_toTopOf="parent"
+            tools:text="@tools:sample/avatars" />
+
+        <TextView
+            android:id="@+id/max_temperature"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical|end"
+            android:textColor="@color/maxTemperature"
+            android:textSize="@dimen/minMaxSize"
+            android:textStyle="bold"
+            card_view:layout_constraintBottom_toBottomOf="parent"
+            card_view:layout_constraintEnd_toStartOf="@+id/min_temperature"
+            card_view:layout_constraintHorizontal_bias="0.5"
+            card_view:layout_constraintStart_toEndOf="@+id/image"
+            card_view:layout_constraintTop_toTopOf="parent"
+            tools:text="30" />
+
+        <TextView
+            android:id="@+id/min_temperature"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginEnd="8dp"
+            android:gravity="center_vertical|end"
+            android:textColor="@color/minTemperature"
+            android:textSize="@dimen/minMaxSize"
+            android:textStyle="bold"
+            card_view:layout_constraintBottom_toBottomOf="parent"
+            card_view:layout_constraintEnd_toEndOf="parent"
+            card_view:layout_constraintHorizontal_bias="0.5"
+            card_view:layout_constraintStart_toEndOf="@+id/max_temperature"
+            card_view:layout_constraintTop_toTopOf="parent"
+            tools:text="25" />
+    </android.support.constraint.ConstraintLayout>
 </android.support.v7.widget.CardView>
